--- a/index.html
+++ b/index.html
@@ -1,7 +1,60 @@
+
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<html lang="es">
+<head>
+	<meta charset="UTF-8">
+	<title>Do Me a Favor!</title>
+
+	<link rel="stylesheet" href="style/index_style.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src='js/script.js'></script>
+</head>
+<body background="pictures/blue.jpg">
+	<header>
+		<nav>
+			<ul>
+				<a href="pedirfavor.html"><li>Do Me a Favor</li></a>
+				
+			</ul>
+				
+				<img id='logo' src='pictures/p.png'>
+
+			<ul>
+				<a href='Registro.html'><li>Registro</li></a>
+				<a href='LogIn.html'><li>Log In</li></a>
+		
+			</ul>
+		</nav>
+
+		
+
+
+	</header>
+
+
+
+	<section id='banner'>
+
+
+		
+	</section>
+
+	<section id='body'>
+
+	
+
+		
+
+
+		
+	</section>
+
+
+	
+
+	
+
+
 </body>
 </html>
