--- a/Contacto.html
+++ b/Contacto.html
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="Inicio.html">Do Me a Favor!</a>
+      <a class="navbar-brand" href="index.html">Do Me a Favor!</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -29,9 +29,9 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="pedirfavor.html">Pedir un Favor<span class="sr-only">(current)</span></a></li>
           <li><a href="listaFavores.html">Hacer un Favor!</a></li>
-        
+
       </ul>
-      
+
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
@@ -49,7 +49,7 @@
 		</form>
 	</section>
 
-	
+
 </body>
 
 
