--- a/Registro.html
+++ b/Registro.html
@@ -11,7 +11,7 @@
 	<script>
 
 
-	var firebase = new Firebase('https://blazing-torch-3316.firebaseio.com/storage');	
+	var firebase = new Firebase('https://blazing-torch-3316.firebaseio.com/storage');
 
 	 function metodo(){
 
@@ -21,8 +21,8 @@
 	 	var usuario = $('#usuario').val();
 	 	var password = $('#pass').val();
 	 	var mail = $('#mail').val();
+		window.location.href="index.html";
 
-	 	
 	 	firebase.push({nombre: nombre,apellidos:apellidos,edad: edad,usuario:usuario,password:password,mail:mail});
 	}
 
@@ -34,7 +34,7 @@
 
 </head>
 
-<body bgcolor= "#E6E6E6">
+<body background="pictures/blue.jpg">
 	<section id= "formulario">
 
 		<p id="titulo"> Bienvenido a Do me a Favor</p>
@@ -45,8 +45,11 @@
 			<input  type="text" id="usuario" name="usuario" placeholder="Nombre de usuario" required>
 			<input  type="mail" id="mail" name="mail" placeholder="Correo electr&oacute;nico" required>
 			<input  type="password" id="pass" name="pass" placeholder="Contrase&ntilde;a" required>
-			<input  type="submit" value="enviar" onclick="metodo()">
-		
+			<form method="link" action="index.html">
+				<a href="index.html"><input  type="submit" value="enviar" onclick="metodo();" ></a>
+			</form>
+			
+
 		</form>
 	</section>
 
