Aparentemente carlos creo la extension htm... ahora todo esta en html para variar un cambio que nos favorece a todos.

--- a/listaFavores.html
+++ b/listaFavores.html
@@ -56,7 +56,7 @@
         <aside class="right-off-canvas-menu">
           <ul class="off-canvas-list">
             <li><label>Users</label></li>
-            <li><a href="perfil.htm">Carlos Rueda</a></li>
+            <li><a href="perfil.html">Carlos Rueda</a></li>
 
           </ul>
         </aside>
