--- a/pedirfavor.html
+++ b/pedirfavor.html
@@ -31,7 +31,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="Contacto.html">Contacto</a></li>
         <li class="dropdown">
-          <a href="perfil.htm" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Perfil <span class="caret"></span></a>
+          <a href="perfil.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Perfil <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
