--- a/perfil.htm
+++ b/perfil.htm
@@ -19,7 +19,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="Inicio.html">Do Me a Favor!</a>
+      <a class="navbar-brand" href="index.html">Do Me a Favor!</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -27,9 +27,9 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="pedirfavor.html">Pedir un Favor<span class="sr-only">(current)</span></a></li>
           <li><a href="listaFavores.html">Hacer un Favor!</a></li>
-        
+
       </ul>
-      
+
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
@@ -51,19 +51,19 @@
                 <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
               </ul>
             </div>
-            <!--/col--> 
+            <!--/col-->
             <div class="col-xs-12 col-sm-8">
               <h2>Carlos Rueda</h2>
               <p><strong>Información: </strong> Estudiante de Ingeniería en Sistemas Computacionales </p>
               <p><strong>Hobbies: </strong> Me gusta programar y jugar videojuegos. </p>
               <p><strong>Habilidades </strong>
-                <span class="label label-info tags">HTML5</span> 
+                <span class="label label-info tags">HTML5</span>
                 <span class="label label-info tags">CSS3</span>
                 <span class="label label-info tags">jQuery</span>
                 <span class="label label-info tags">Bootstrap3</span>
               </p>
             </div>
-            <!--/col-->          
+            <!--/col-->
             <div class="clearfix"></div>
             <div class="col-xs-12 col-sm-4">
               <h2><strong> 256 </strong></h2>
@@ -80,7 +80,7 @@
             <div class="col-xs-12 col-sm-4">
               <h2><strong>43</strong></h2>
               <p><small>Amigos</small></p>
-              <button type="button" class="btn btn-primary btn-block"><span class="fa fa-gear"></span> Opciones </button>  
+              <button type="button" class="btn btn-primary btn-block"><span class="fa fa-gear"></span> Opciones </button>
             </div>
             <!--/col-->
           </div>
@@ -90,9 +90,9 @@
       </div>
       <!--/panel-->
     </div>
-    <!--/col--> 
+    <!--/col-->
   </div>
-  <!--/row--> 
+  <!--/row-->
 </div>
 <!--/container-->
 </body>
