Modified files I dont remember why

--- a/Registro.html
+++ b/Registro.html
@@ -46,9 +46,9 @@
 			<input  type="mail" id="mail" name="mail" placeholder="Correo electr&oacute;nico" required>
 			<input  type="password" id="pass" name="pass" placeholder="Contrase&ntilde;a" required>
 			<form method="link" action="index.html">
-				<a href="index.html"><input  type="submit" value="enviar" onclick="metodo();" ></a>
+				<a href='index.html'><input  type="submit" value="submit"  ></a>
 			</form>
-			
+
 
 		</form>
 	</section>
