--- a/LogIn.html
+++ b/LogIn.html
@@ -43,7 +43,7 @@
 			<input  type="text" id="usuario" name="usuario" placeholder="Usuario" required>
 			<input type="text" id="contraseña" name="contraseña" placeholder="Contraseña" required>
 
-			<input  type="submit" value="enviar" >
+			<input  type="submit" value="enviar" onclick=  > </a>
 
 		</form>
 	</section>
