Changes to make it so you can use google analytics

--- a/Inicio.html
+++ b/Inicio.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>efecto scroll en menu</title>
+	<title>Do Me a Favor!</title>
 
 	<link rel="stylesheet" href="style/index_style.css">
 
@@ -15,25 +15,24 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-76177931-7', 'auto');
+  ga('create', 'UA-76177931-1', 'auto');
   ga('send', 'pageview');
 
 </script>
 </head>
-<body>
+<body background="pictures/blue.jpg">
 	<header>
 		<nav>
 			<ul>
-				<a href='perfil.html'><li>Perfil</li></a>
-				<a href='pedirfavor.html'><li>Hazme un Favor</li></a>
+				<a href="Inicio.html"><li>Do Me a Favor</li></a>
 				
 			</ul>
 				
 				<img id='logo' src='pictures/p.png'>
 
 			<ul>
-				<a href='listaFavores.html'><li>Quiero hacer un favor</li></a>
-				<a href='Contacto.html'><li>Contacto</li></a>
+				<a href='Registro.html'><li>Registro</li></a>
+				<a href='LogIn.html'><li>Log In</li></a>
 		
 			</ul>
 		</nav>
@@ -55,16 +54,8 @@
 
 	
 
-		<div id="slideshow">
-			<div>
-				<img src="pictures/prueba.png"/ width="500px" height="300">
-			</div>
+		
 
-			<div>
-
-				<img src="pictures/prueba2.jpg"/ width="500px" height="300">
-			</div>
-		</div>
 
 		
 	</section>
