--- a/LogIn.html
+++ b/LogIn.html
@@ -7,11 +7,15 @@
 	<link rel="stylesheet" href="style/index_style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src='js/firebase.js'></script>
+	<script src='js/script.js'></script>
 
 	<script>
 
 
-	var firebase = new Firebase('https://blazing-torch-3316.firebaseio.com/storage');
+	var firebase = new Firebase('https://blazing-torch-3316.firebaseio.com/storage');	
+		
+	
+
 
 	 function metodo(){
 
@@ -21,8 +25,12 @@
 	 	var usuario = $('#usuario').val();
 	 	var password = $('#pass').val();
 	 	var mail = $('#mail').val();
-		window.location.href="index.html";
-
+		window.location.href="dome.html";
+		$( "#target" ).submit(function( event ) {
+  		alert( "Handler for .submit() called." );
+  		event.preventDefault();
+		});
+	 	
 	 	firebase.push({nombre: nombre,apellidos:apellidos,edad: edad,usuario:usuario,password:password,mail:mail});
 	}
 
@@ -30,7 +38,17 @@
 
 
 	</script>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-76177931-5', 'auto');
+  ga('send', 'pageview');
+
+</script>
+	
 	</head>
 
 
@@ -39,12 +57,13 @@
 	<section id= "formulario">
 
 		<p id="titulo"> Log In</p>
-		<form id="registro" action="">
+		<form id="login" action="">
 			<input  type="text" id="usuario" name="usuario" placeholder="Usuario" required>
-			<input type="text" id="contraseña" name="contraseña" placeholder="Contraseña" required>
+			<input type="password" id="contraseña" name="contraseña" placeholder="Contraseña" required>
+				<input  type="submit" value="Enviar" onclick="metodo()" >
 
-			<input  type="submit" value="enviar" onclick=  > </a>
-
+			
+		
 		</form>
 	</section>
 
