--- a/Contacto.html
+++ b/Contacto.html
@@ -1,56 +1,70 @@
-<!doctype html>
-<html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/bootstrap-responsive.css">
-	<title>formulario flat design</title>
-	<link rel="stylesheet" href="style/index_style.css">
-</head>
-<body>
-	
+<!DOCTYPE html>
+<html >
+  <head>
+    <meta charset="UTF-8">
+    <title>RESPONSIVE MATERIAL DESIGN CONTACT FORM </title>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-	<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="Inicio.html">Do Me a Favor!</a>
+
+    <link rel="stylesheet" href="css/reset.css">
+
+    <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+
+        <link rel="stylesheet" href="css/style.css">
+
+
+
+
+  </head>
+
+  <body>
+
+    <h1> Contacto
+</h1>
+<section class="contact-wrap">
+  <form action="" class="contact-form">
+    <div class="col-sm-6">
+      <div class="input-block">
+        <label for="">First Name</label>
+        <input type="text" class="form-control">
+      </div>
     </div>
+    <div class="col-sm-6">
+      <div class="input-block">
+        <label for="">Last Name</label>
+        <input type="text" class="form-control">
+      </div>
+    </div>
+    <div class="col-sm-12">
+      <div class="input-block">
+        <label for="">Email</label>
+        <input type="text" class="form-control">
+      </div>
+    </div>
+    <div class="col-sm-12">
+      <div class="input-block">
+        <label for="">Message Subject</label>
+        <input type="text" class="form-control">
+      </div>
+    </div>
+    <div class="col-sm-12">
+      <div class="input-block textarea">
+        <label for="">Drop your message here</label>
+        <textarea rows="3" type="text" class="form-control"></textarea>
+      </div>
+    </div>
+    <div class="col-sm-12">
+      <button class="square-button">Send</button>
+    </div>
+  </form>
+</section>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="pedirfavor.html">Pedir un Favor<span class="sr-only">(current)</span></a></li>
-          <li><a href="listaFavores.html">Hacer un Favor!</a></li>
-        
-      </ul>
-      
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-	<section id="formulario">
-		<p id="titulo">Contáctanos</p>
+<a target="_blank" href="http://codepen.io/nikhil8krishnan/" class="copy-right">Follow Me</a>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-		<form action="php/enviar_correo.php" method="post">
-			<input type="text" id="nombre" name="nombre" placeholder="Nombre">
-			<input type="text" id="apellidos" name="apellidos" placeholder="Apellidos">
-			<input type="mail" id="mail" name="mail" placeholder="Correo electr&oacute;nico">
-			<textarea name="mensaje" placeholder="mensaje"></textarea>
-			<input type="submit" value="enviar">
-		</form>
-	</section>
-
-	
-</body>
+        <script src="js/index.js"></script>
 
 
+
+
+  </body>
 </html>
