Vincule la pagina de procesos a la pagina de index

--- a/index.html
+++ b/index.html
@@ -15,19 +15,16 @@
 		<nav>
 			<ul>
 				<a href="pedirfavor.html"><li>Do Me a Favor</li></a>
-				
 			</ul>
-				
 				<img id='logo' src='pictures/p.png'>
-
 			<ul>
 				<a href='Registro.html'><li>Registro</li></a>
 				<a href='LogIn.html'><li>Log In</li></a>
-		
+				<a href='Procesos.html'><li>Procesos</li></a>
 			</ul>
 		</nav>
 
-		
+
 
 
 	</header>
@@ -37,23 +34,23 @@
 	<section id='banner'>
 
 
-		
+
 	</section>
 
 	<section id='body'>
 
-	
-
-		
 
 
-		
+
+
+
+
 	</section>
 
 
-	
 
-	
+
+
 
 
 </body>
