Reparacion de hipervinculos de la pagina de proceso y agregar un vinculo de proceso a index.

--- a/Procesos.html
+++ b/Procesos.html
@@ -95,7 +95,7 @@
                     <hr class="small">
                         <div class="col-md-4 col-sm-8">
                             <div class="service-item">
-                              <img src = "/Bocetos/perfil.png" width="250px" height="200px"></img>
+                              <img src = "Bocetos/perfil.png" width="250px" height="200px"></img>
                                 <h4>
                                     <strong>Perfil</strong>
                                 </h4>
@@ -103,7 +103,7 @@
                         </div>
                         <div class="col-md-4 col-sm-8">
                             <div class="service-item">
-                            <img src = "/Bocetos/hagounfavor.png" width="250px" height="200px"></img>
+                            <img src = "Bocetos/hagounfavor.png" width="250px" height="200px"></img>
                                 <h4>
                                     <strong>Favores disponibles</strong>
                                 </h4>
@@ -111,7 +111,7 @@
                         </div>
                         <div class="col-md-4 col-sm-8">
                             <div class="service-item">
-                            <img src = "/Bocetos/hazmeunfavor.png" width="250px" height="200px"></img>
+                            <img src = "Bocetos/hazmeunfavor.png" width="250px" height="200px"></img>
                                 <h4>
                                     <strong>Haz un favor</strong>
                                 </h4>
@@ -119,7 +119,7 @@
                         </div>
                         <div class="col-md-6 col-sm-8">
                             <div class="service-item">
-                              <img src = "/Bocetos/metododepago.png" width="250px" height="200px"></img>
+                              <img src = "Bocetos/metododepago.png" width="250px" height="200px"></img>
                                 <h4>
                                     <strong>Metodo de pago</strong>
                                 </h4>
@@ -127,7 +127,7 @@
                         </div>
                         <div class="col-md-6 col-sm-8">
                             <div class="service-item">
-                              <img src = "/Bocetos/registro.png" width="250px" height="200px"></img>
+                              <img src = "Bocetos/registro.png" width="250px" height="200px"></img>
                                 <h4>
                                     <strong>Registro</strong>
                                 </h4>
@@ -228,7 +228,7 @@
                 <div class="col-lg-12 text-center">
                     <h3>Pagina de persona</h3>
                     <a href="persona.html" class="btn btn-lg btn-light">Click Aqui!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+                    <a href="index.html" class="btn btn-lg btn-dark">Regreso al index!</a>
                 </div>
             </div>
         </div>
