--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-lg-8 offset-md-2">
                     <h2>Descarga Vegalica</h2>
                     <p>Puedes descargar un demo de la aplicacion por medio del siguiente vinculo.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <a href="" class="btn btn-default btn-lg">Descarga</a>
                 </div>
             </div>
         </div>
